# Rusty_Solitaire

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CREDITS.md  Cargo.toml  Dockerfile  README.md  SESSION_HANDOFF.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.sqlx/: query-36bab3ca8f126c66a6f4865d2699702689518bd3a796c374f932aba0434a4c94.json
docs/: ANDROID.md  SESSION_HANDOFF.md
docs/android/: PLAYABILITY_TODO.md
docs/superpowers/plans/: 2026-04-23-phase3-bevy-rendering.md
docs/ui-mockups/: achievements-mobile.html  card-face-migration.md  challenge-mode-mobile.html  daily-challenge-mobile.html  design-system.md  desktop-adaptation.md  game-table-mobile.html  help-mobile.html  home-menu-desktop.html  home-menu-mobile.html  leaderboard-mobile.html  level-up-mobile.html  onboarding-draw-mobile.html  onboarding-tap-mobile.html  onboarding-theme-mobile.html  pause-menu-mobile.html  profile-mobile.html  radial-menu-mobile.html  replay-overlay-mobile.html  settings-mobile.html  splash-mobile.html  stats-mobile.html  sync-mobile.html  theme-picker-mobile.html  time-attack-mobile.html  weekly-goals-mobile.html  win-summary-mobile.html
pkg/solitaire-quest/: PKGBUILD
pkg/solitaire-quest-server/: PKGBUILD
solitaire_app/: Cargo.toml
solitaire_app/src/: lib.rs  main.rs
solitaire_assetgen/: Cargo.toml
solitaire_core/: Cargo.toml
solitaire_core/src/: achievement.rs  card.rs  deck.rs  game_state.rs  lib.rs  pile.rs  rules.rs  scoring.rs  solver.rs
solitaire_data/: Cargo.toml
solitaire_data/src/: achievements.rs  android_keystore.rs  auth_tokens.rs  challenge.rs  difficulty_seeds.rs  lib.rs  platform.rs  progress.rs  replay.rs  settings.rs  stats.rs  storage.rs  weekly.rs
solitaire_engine/: Cargo.toml
solitaire_engine/examples/: background_generator.rs  card_face_generator.rs  card_face_poc.rs  icon_generator.rs
solitaire_engine/src/: achievement_plugin.rs  android_clipboard.rs  animation_plugin.rs  audio_plugin.rs  auto_complete_plugin.rs  card_plugin.rs  challenge_plugin.rs  cursor_plugin.rs  daily_challenge_plugin.rs  diagnostics_hud.rs  difficulty_plugin.rs  events.rs  feedback_anim_plugin.rs  font_plugin.rs  game_plugin.rs  help_plugin.rs  home_plugin.rs  hud_plugin.rs  input_plugin.rs  layout.rs  leaderboard_plugin.rs  lib.rs  onboarding_plugin.rs  pause_plugin.rs  pending_hint.rs  play_by_seed_plugin.rs  profile_plugin.rs  progress_plugin.rs  radial_menu.rs  replay_overlay.rs  replay_playback.rs  resources.rs  safe_area.rs  selection_plugin.rs  settings_plugin.rs  splash_plugin.rs  stats_plugin.rs  sync_plugin.rs  table_plugin.rs  time_attack_plugin.rs  (+6 more)
solitaire_engine/src/assets/: card_face_svg.rs  icon_svg.rs  mod.rs  sources.rs  svg_loader.rs  user_dir.rs
solitaire_engine/src/card_animation/: animation.rs  chain.rs  diagnostics.rs  interaction.rs  mod.rs  tuning.rs
solitaire_engine/src/theme/: loader.rs  mod.rs  plugin.rs
solitaire_engine/tests/: card_face_svg_pin.rs  icon_svg_pin.rs
solitaire_server/: Cargo.toml
solitaire_server/src/: challenge.rs  error.rs  leaderboard.rs  lib.rs  middleware.rs  sync.rs
solitaire_server/tests/: server_tests.rs
solitaire_server/web/: index.html  replay.css  replay.js
solitaire_server/web/pkg/: solitaire_wasm.js  solitaire_wasm_bg.wasm
solitaire_sync/: Cargo.toml
solitaire_sync/src/: achievements.rs  merge.rs  progress.rs  stats.rs
solitaire_wasm/: Cargo.toml
solitaire_wasm/src/: lib.rs
