[package]
name    = "solitaire_engine"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bevy           = { workspace = true }
kira           = { workspace = true }
solitaire_core = { workspace = true }
solitaire_data = { workspace = true }
solitaire_sync = { workspace = true }
chrono         = { workspace = true }
uuid           = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
thiserror      = { workspace = true }
usvg           = { workspace = true }
resvg          = { workspace = true }
tiny-skia      = { workspace = true }
ron            = { workspace = true }
dirs           = { workspace = true }
zip            = { workspace = true }
arboard        = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tempfile    = { workspace = true }
# Used by the theme-thumbnail tests to encode a known-valid PNG at
# runtime. Already a transitive dep of bevy_image, so the dev-dep is
# free in build-graph terms — it just makes the API surface available
# to test code without forcing us into bevy_image's re-export shape.
image       = { version = "0.25", default-features = false, features = ["png"] }
